make ui a bit better - add button bar to service container

--- a/src/components/Service/ServiceInfo/ServiceInfo.css
+++ b/src/components/Service/ServiceInfo/ServiceInfo.css
@@ -5,9 +5,14 @@
      padding: 10px;
      text-align: center;
 }
-.text{
+.title{
     color: #ffffff !important;
     padding:10px 0px 10px 0px;
+    
+}
+.text{
+    color: #FFEB3B !important;
+    padding:10px 0px 0px 0px;
     
 }
 .icon{
