--- a/src/components/ServiceProperties/ServiceProperties.css
+++ b/src/components/ServiceProperties/ServiceProperties.css
@@ -9,7 +9,8 @@
     padding: 5px;
     background-color: #eeeeee;
     border: 1px solid #dddddd;
-    margin-bottom: 10px
+    margin-bottom: 10px;
+    
 
 }
 .textField{
