add auto-login with exist token - make service info ui a bit better

--- a/src/components/Service/ServiceInfo/ServiceInfo.css
+++ b/src/components/Service/ServiceInfo/ServiceInfo.css
@@ -1,6 +1,6 @@
 .container
 {
-     height:150px;
+     min-height:150px;
      padding: 10px;
      text-align: center;
      cursor: pointer;
@@ -24,5 +24,7 @@
 }
 .icon{
     color: #ffffff !important;
-
+}
+.link{
+    color:#ffffff
 }
